lib/flutter_taglib_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset(
  'package:flutter_taglib/flutter_taglib_bindings_generated.dart',
)
library;

import 'dart:ffi' as ffi;

/// Open a file by file path. Returns NULL if failed.
@ffi.Native<ffi.Pointer<TagLibBridgeFile> Function(ffi.Pointer<ffi.Char>)>()
external ffi.Pointer<TagLibBridgeFile> taglib_bridge_open(
  ffi.Pointer<ffi.Char> filepath,
);

/// Open a file by file path with audio properties read style option (0=Fast, 1=Average, 2=Accurate, 3=None).
@ffi.Native<ffi.Pointer<TagLibBridgeFile> Function(ffi.Pointer<ffi.Char>, ffi.Int)>()
external ffi.Pointer<TagLibBridgeFile> taglib_bridge_open_with_style(
  ffi.Pointer<ffi.Char> filepath,
  int read_style,
);

/// Open a file by File Descriptor (FD). Returns NULL if failed.
@ffi.Native<ffi.Pointer<TagLibBridgeFile> Function(ffi.Int)>()
external ffi.Pointer<TagLibBridgeFile> taglib_bridge_open_fd(int fd);

/// Open a file by File Descriptor (FD) with audio properties read style option.
@ffi.Native<ffi.Pointer<TagLibBridgeFile> Function(ffi.Int, ffi.Int)>()
external ffi.Pointer<TagLibBridgeFile> taglib_bridge_open_fd_with_style(
  int fd,
  int read_style,
);

/// Open a remote file via HTTP/HTTPS URL with range-based stream.
@ffi.Native<
  ffi.Pointer<TagLibBridgeFile> Function(
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Int,
    ffi.Int,
  )
>()
external ffi.Pointer<TagLibBridgeFile> taglib_bridge_open_http(
  ffi.Pointer<ffi.Char> url,
  ffi.Pointer<ffi.Char> headers_json,
  int read_style,
  int timeout_ms,
);

/// Save changes to the file. Returns 1 on success, 0 on failure.
@ffi.Native<ffi.Int Function(ffi.Pointer<TagLibBridgeFile>)>()
external int taglib_bridge_save(ffi.Pointer<TagLibBridgeFile> file);

/// Close and free resources.
@ffi.Native<ffi.Void Function(ffi.Pointer<TagLibBridgeFile>)>()
external void taglib_bridge_close(ffi.Pointer<TagLibBridgeFile> file);

/// Read string properties. The returned strings are managed by the bridge and must NOT be freed.
@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<TagLibBridgeFile>)>()
external ffi.Pointer<ffi.Char> taglib_bridge_get_title(
  ffi.Pointer<TagLibBridgeFile> file,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<TagLibBridgeFile>)>()
external ffi.Pointer<ffi.Char> taglib_bridge_get_artist(
  ffi.Pointer<TagLibBridgeFile> file,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<TagLibBridgeFile>)>()
external ffi.Pointer<ffi.Char> taglib_bridge_get_album(
  ffi.Pointer<TagLibBridgeFile> file,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<TagLibBridgeFile>)>()
external ffi.Pointer<ffi.Char> taglib_bridge_get_genre(
  ffi.Pointer<TagLibBridgeFile> file,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<TagLibBridgeFile>)>()
external ffi.Pointer<ffi.Char> taglib_bridge_get_comment(
  ffi.Pointer<TagLibBridgeFile> file,
);

/// Read integer properties
@ffi.Native<ffi.Uint32 Function(ffi.Pointer<TagLibBridgeFile>)>()
external int taglib_bridge_get_year(ffi.Pointer<TagLibBridgeFile> file);

@ffi.Native<ffi.Uint32 Function(ffi.Pointer<TagLibBridgeFile>)>()
external int taglib_bridge_get_track(ffi.Pointer<TagLibBridgeFile> file);

/// Write string properties
@ffi.Native<
  ffi.Void Function(ffi.Pointer<TagLibBridgeFile>, ffi.Pointer<ffi.Char>)
>()
external void taglib_bridge_set_title(
  ffi.Pointer<TagLibBridgeFile> file,
  ffi.Pointer<ffi.Char> title,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<TagLibBridgeFile>, ffi.Pointer<ffi.Char>)
>()
external void taglib_bridge_set_artist(
  ffi.Pointer<TagLibBridgeFile> file,
  ffi.Pointer<ffi.Char> artist,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<TagLibBridgeFile>, ffi.Pointer<ffi.Char>)
>()
external void taglib_bridge_set_album(
  ffi.Pointer<TagLibBridgeFile> file,
  ffi.Pointer<ffi.Char> album,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<TagLibBridgeFile>, ffi.Pointer<ffi.Char>)
>()
external void taglib_bridge_set_genre(
  ffi.Pointer<TagLibBridgeFile> file,
  ffi.Pointer<ffi.Char> genre,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<TagLibBridgeFile>, ffi.Pointer<ffi.Char>)
>()
external void taglib_bridge_set_comment(
  ffi.Pointer<TagLibBridgeFile> file,
  ffi.Pointer<ffi.Char> comment,
);

/// Write integer properties
@ffi.Native<ffi.Void Function(ffi.Pointer<TagLibBridgeFile>, ffi.Uint32)>()
external void taglib_bridge_set_year(
  ffi.Pointer<TagLibBridgeFile> file,
  int year,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<TagLibBridgeFile>, ffi.Uint32)>()
external void taglib_bridge_set_track(
  ffi.Pointer<TagLibBridgeFile> file,
  int track,
);

/// Read audio properties
@ffi.Native<ffi.Int Function(ffi.Pointer<TagLibBridgeFile>)>()
external int taglib_bridge_get_duration(ffi.Pointer<TagLibBridgeFile> file);

@ffi.Native<ffi.Int Function(ffi.Pointer<TagLibBridgeFile>)>()
external int taglib_bridge_get_bitrate(ffi.Pointer<TagLibBridgeFile> file);

@ffi.Native<ffi.Int Function(ffi.Pointer<TagLibBridgeFile>)>()
external int taglib_bridge_get_samplerate(ffi.Pointer<TagLibBridgeFile> file);

@ffi.Native<ffi.Int Function(ffi.Pointer<TagLibBridgeFile>)>()
external int taglib_bridge_get_channels(ffi.Pointer<TagLibBridgeFile> file);

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<TagLibBridgeFile>)>()
external ffi.Pointer<ffi.Char> taglib_bridge_get_bitrate_mode(
  ffi.Pointer<TagLibBridgeFile> file,
);

/// Audio format detected from the file contents (e.g. "MP3", "FLAC", "OPUS", "AAC").
/// Returns NULL when the format could not be determined.
@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<TagLibBridgeFile>)>()
external ffi.Pointer<ffi.Char> taglib_bridge_get_format(
  ffi.Pointer<TagLibBridgeFile> file,
);

/// Whether the audio is losslessly encoded.
/// Returns 1 for lossless, 0 for lossy, and -1 when it cannot be determined.
@ffi.Native<ffi.Int Function(ffi.Pointer<TagLibBridgeFile>)>()
external int taglib_bridge_is_lossless(ffi.Pointer<TagLibBridgeFile> file);

/// Album Art / Picture APIs
@ffi.Native<ffi.Int Function(ffi.Pointer<TagLibBridgeFile>)>()
external int taglib_bridge_has_cover(ffi.Pointer<TagLibBridgeFile> file);

@ffi.Native<ffi.Uint32 Function(ffi.Pointer<TagLibBridgeFile>)>()
external int taglib_bridge_get_cover_data_size(
  ffi.Pointer<TagLibBridgeFile> file,
);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<TagLibBridgeFile>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Uint32,
  )
>()
external int taglib_bridge_get_cover_data(
  ffi.Pointer<TagLibBridgeFile> file,
  ffi.Pointer<ffi.Uint8> buffer,
  int buffer_size,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<TagLibBridgeFile>)>()
external ffi.Pointer<ffi.Char> taglib_bridge_get_cover_mime_type(
  ffi.Pointer<TagLibBridgeFile> file,
);

/// Front cover bytes only, without materializing the other pictures or their
/// metadata. Prefers the picture typed "Front Cover", falling back to the first.
/// Call taglib_bridge_front_cover_size first: it resolves and caches the bytes
/// and returns their size (0 when there is no cover). Then call
/// taglib_bridge_front_cover_data to copy them out, which releases the cache.
@ffi.Native<ffi.Uint32 Function(ffi.Pointer<TagLibBridgeFile>)>()
external int taglib_bridge_front_cover_size(ffi.Pointer<TagLibBridgeFile> file);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<TagLibBridgeFile>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Uint32,
  )
>()
external int taglib_bridge_front_cover_data(
  ffi.Pointer<TagLibBridgeFile> file,
  ffi.Pointer<ffi.Uint8> buffer,
  int buffer_size,
);

/// Write album art. mime_type can be "image/jpeg" or "image/png". Pass data=NULL, size=0 to remove cover.
@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<TagLibBridgeFile>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Uint32,
  )
>()
external int taglib_bridge_set_cover(
  ffi.Pointer<TagLibBridgeFile> file,
  ffi.Pointer<ffi.Char> mime_type,
  ffi.Pointer<ffi.Uint8> data,
  int size,
);

@ffi.Native<ffi.Pointer<TagLibBridgePictures> Function()>()
external ffi.Pointer<TagLibBridgePictures> taglib_bridge_pictures_create();

@ffi.Native<ffi.Void Function(ffi.Pointer<TagLibBridgePictures>)>()
external void taglib_bridge_pictures_free(
  ffi.Pointer<TagLibBridgePictures> pictures,
);

@ffi.Native<
  ffi.Pointer<TagLibBridgePictures> Function(ffi.Pointer<TagLibBridgeFile>)
>()
external ffi.Pointer<TagLibBridgePictures> taglib_bridge_pictures_get(
  ffi.Pointer<TagLibBridgeFile> file,
);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<TagLibBridgeFile>,
    ffi.Pointer<TagLibBridgePictures>,
  )
>()
external int taglib_bridge_pictures_set(
  ffi.Pointer<TagLibBridgeFile> file,
  ffi.Pointer<TagLibBridgePictures> pictures,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<TagLibBridgePictures>)>()
external int taglib_bridge_pictures_size(
  ffi.Pointer<TagLibBridgePictures> pictures,
);

@ffi.Native<ffi.Uint32 Function(ffi.Pointer<TagLibBridgePictures>, ffi.Int)>()
external int taglib_bridge_pictures_data_size(
  ffi.Pointer<TagLibBridgePictures> pictures,
  int index,
);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<TagLibBridgePictures>,
    ffi.Int,
    ffi.Pointer<ffi.Uint8>,
    ffi.Uint32,
  )
>()
external int taglib_bridge_pictures_data(
  ffi.Pointer<TagLibBridgePictures> pictures,
  int index,
  ffi.Pointer<ffi.Uint8> buffer,
  int buffer_size,
);

@ffi.Native<
  ffi.Pointer<ffi.Char> Function(ffi.Pointer<TagLibBridgePictures>, ffi.Int)
>()
external ffi.Pointer<ffi.Char> taglib_bridge_pictures_mime_type(
  ffi.Pointer<TagLibBridgePictures> pictures,
  int index,
);

@ffi.Native<
  ffi.Pointer<ffi.Char> Function(ffi.Pointer<TagLibBridgePictures>, ffi.Int)
>()
external ffi.Pointer<ffi.Char> taglib_bridge_pictures_description(
  ffi.Pointer<TagLibBridgePictures> pictures,
  int index,
);

@ffi.Native<
  ffi.Pointer<ffi.Char> Function(ffi.Pointer<TagLibBridgePictures>, ffi.Int)
>()
external ffi.Pointer<ffi.Char> taglib_bridge_pictures_picture_type(
  ffi.Pointer<TagLibBridgePictures> pictures,
  int index,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<TagLibBridgePictures>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Uint32,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
  )
>()
external void taglib_bridge_pictures_add(
  ffi.Pointer<TagLibBridgePictures> pictures,
  ffi.Pointer<ffi.Uint8> data,
  int size,
  ffi.Pointer<ffi.Char> mime_type,
  ffi.Pointer<ffi.Char> picture_type,
  ffi.Pointer<ffi.Char> description,
);

@ffi.Native<ffi.Pointer<TagLibBridgeProperties> Function()>()
external ffi.Pointer<TagLibBridgeProperties> taglib_bridge_properties_create();

@ffi.Native<ffi.Void Function(ffi.Pointer<TagLibBridgeProperties>)>()
external void taglib_bridge_properties_free(
  ffi.Pointer<TagLibBridgeProperties> props,
);

@ffi.Native<
  ffi.Pointer<TagLibBridgeProperties> Function(ffi.Pointer<TagLibBridgeFile>)
>()
external ffi.Pointer<TagLibBridgeProperties> taglib_bridge_properties_get(
  ffi.Pointer<TagLibBridgeFile> file,
);

@ffi.Native<
  ffi.Pointer<TagLibBridgeProperties> Function(
    ffi.Pointer<TagLibBridgeFile>,
    ffi.Pointer<TagLibBridgeProperties>,
  )
>()
external ffi.Pointer<TagLibBridgeProperties> taglib_bridge_properties_set(
  ffi.Pointer<TagLibBridgeFile> file,
  ffi.Pointer<TagLibBridgeProperties> props,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<TagLibBridgeProperties>)>()
external int taglib_bridge_properties_size(
  ffi.Pointer<TagLibBridgeProperties> props,
);

@ffi.Native<
  ffi.Pointer<ffi.Char> Function(ffi.Pointer<TagLibBridgeProperties>, ffi.Int)
>()
external ffi.Pointer<ffi.Char> taglib_bridge_properties_key(
  ffi.Pointer<TagLibBridgeProperties> props,
  int index,
);

@ffi.Native<
  ffi.Int Function(ffi.Pointer<TagLibBridgeProperties>, ffi.Pointer<ffi.Char>)
>()
external int taglib_bridge_properties_value_count(
  ffi.Pointer<TagLibBridgeProperties> props,
  ffi.Pointer<ffi.Char> key,
);

@ffi.Native<
  ffi.Pointer<ffi.Char> Function(
    ffi.Pointer<TagLibBridgeProperties>,
    ffi.Pointer<ffi.Char>,
    ffi.Int,
  )
>()
external ffi.Pointer<ffi.Char> taglib_bridge_properties_value(
  ffi.Pointer<TagLibBridgeProperties> props,
  ffi.Pointer<ffi.Char> key,
  int value_index,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<TagLibBridgeProperties>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
  )
>()
external void taglib_bridge_properties_add(
  ffi.Pointer<TagLibBridgeProperties> props,
  ffi.Pointer<ffi.Char> key,
  ffi.Pointer<ffi.Char> value,
);

final class TagLibBridgeFile extends ffi.Opaque {}

final class TagLibBridgePictures extends ffi.Opaque {}

final class TagLibBridgeProperties extends ffi.Opaque {}
